force-app/main/default/objects/Sentinel_User_Info__c/Sentinel_User_Info__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Sentinel User Info</label>
</CustomObject>