force-app/main/default/objects/Sentinel_User_Info__c/fields/Activate_Org1__c.field-meta.xml
<CustomField>
    <fullName>Activate_Org1__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Activate Org1</label>
    <type>Checkbox</type>
</CustomField>