force-app/main/default/objects/Sentinel_User_Info__c/fields/DML2_URL__c.field-meta.xml
<CustomField>
    <fullName>DML2_URL__c</fullName>
    <label>DML2 URL</label>
    <type>Url</type>
</CustomField>