force-app/main/default/objects/Sentinel_User_Info__c/fields/DML_Url__c.field-meta.xml
<CustomField>
    <fullName>DML_Url__c</fullName>
    <label>DML Url</label>
    <type>Url</type>
</CustomField>