force-app/main/default/objects/Sentinel_User_Info__c/fields/Enable_Features__c.field-meta.xml
<CustomField>
    <fullName>Enable_Features__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Features</label>
    <type>Checkbox</type>
</CustomField>