force-app/main/default/objects/Sentinel_User_Info__c/fields/Order_Sync__c.field-meta.xml
<CustomField>
    <fullName>Order_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Sync</label>
    <type>Checkbox</type>
</CustomField>