force-app/main/default/objects/Sentinel_User_Info__c/fields/Org2_URL__c.field-meta.xml
<CustomField>
    <fullName>Org2_URL__c</fullName>
    <label>Org2 URL</label>
    <type>Url</type>
</CustomField>