force-app/main/default/objects/Sentinel_User_Info__c/fields/Org_URL__c.field-meta.xml
<CustomField>
    <fullName>Org_URL__c</fullName>
    <label>Authentication URL</label>
    <type>Url</type>
</CustomField>