force-app/main/default/objects/Sentinel_User_Info__c/fields/Password2__c.field-meta.xml
<CustomField>
    <fullName>Password2__c</fullName>
    <label>Password2</label>
    <length>150</length>
    <type>Text</type>
</CustomField>