force-app/main/default/objects/Sentinel_User_Info__c/fields/ProdDML_Url__c.field-meta.xml
<CustomField>
    <fullName>ProdDML_Url__c</fullName>
    <label>ProdDML Url</label>
    <type>Url</type>
</CustomField>