force-app/main/default/objects/Sentinel_User_Info__c/fields/ProdOrg_URL__c.field-meta.xml
<CustomField>
    <fullName>ProdOrg_URL__c</fullName>
    <label>ProdOrg URL</label>
    <type>Url</type>
</CustomField>