force-app/main/default/objects/Sentinel_User_Info__c/fields/ProdPassword__c.field-meta.xml
<CustomField>
    <fullName>ProdPassword__c</fullName>
    <label>ProdPassword</label>
    <length>150</length>
    <type>Text</type>
</CustomField>