force-app/main/default/objects/Sentinel_User_Info__c/fields/ProdUsername__c.field-meta.xml
<CustomField>
    <fullName>ProdUsername__c</fullName>
    <label>ProdUsername</label>
    <length>150</length>
    <type>Text</type>
</CustomField>