force-app/main/default/objects/Sentinel_User_Info__c/fields/Quote_Sync__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Entitlement will be created in Sentinel when Quote will be selected from Sentinel Connect Settings page</description>
    <inlineHelpText>Entitlement will be created in Sentinel when Quote will be selected from Sentinel Connect Settings page</inlineHelpText>
    <label>Quote Sync</label>
    <type>Checkbox</type>
</CustomField>