force-app/main/default/objects/Sentinel_User_Info__c/fields/Selected_Org__c.field-meta.xml
<CustomField>
    <fullName>Selected_Org__c</fullName>
    <label>Selected Org</label>
    <length>100</length>
    <type>Text</type>
</CustomField>