force-app/main/default/objects/Sentinel_User_Info__c/fields/StageDML_Url__c.field-meta.xml
<CustomField>
    <fullName>StageDML_Url__c</fullName>
    <label>StageDML Url</label>
    <type>Url</type>
</CustomField>