force-app/main/default/objects/Sentinel_User_Info__c/fields/StageOrg_URL__c.field-meta.xml
<CustomField>
    <fullName>StageOrg_URL__c</fullName>
    <label>StageOrg URL</label>
    <type>Url</type>
</CustomField>