force-app/main/default/objects/Sentinel_User_Info__c/fields/StagePassword__c.field-meta.xml
<CustomField>
    <fullName>StagePassword__c</fullName>
    <label>StagePassword</label>
    <length>150</length>
    <type>Text</type>
</CustomField>