force-app/main/default/objects/Sentinel_User_Info__c/fields/StageUsername__c.field-meta.xml
<CustomField>
    <fullName>StageUsername__c</fullName>
    <label>StageUsername</label>
    <length>150</length>
    <type>Text</type>
</CustomField>