force-app/main/default/objects/Sentinel_User_Info__c/fields/Username2__c.field-meta.xml
<CustomField>
    <fullName>Username2__c</fullName>
    <label>Username2</label>
    <length>150</length>
    <type>Text</type>
</CustomField>